Added a friendlier title

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Papillon</h1>
+        <h1 id="Papillon"> Welcome to the Butterfly’s homepage !</h1>
         <p></p>
 
         <p class="view"><a href="https://github.com/Celine-Langlade/Papillon">View the Project on GitHub <small>Celine-Langlade/Papillon</small></a></p>
