--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    
   </head>
   <body>
-    <h3> Sauver les papillons Isabelle </h3>
+    <h1> Sauver les papillons Isabelle </h1>
     <p> L'Isabelle, Graellsia isabellae, est une espèce de lépidoptères de la famille des Saturniidae, la sous-famille des Saturniinae, et du genre monotypique Graellsia.
 C'est l'un des plus grands papillons d'Europe. Le mâle peut théoriquement repérer de très loin la femelle grâce aux capteurs de phéromones de ses larges antennes plumeuses. 
 Les adultes ne s'alimentent pas, consacrant leur courte vie (de deux à seize jours ; huit jours en moyenne en captivité pour les femelles et cinq pour les mâles) à la reproduction.
@@ -12,11 +12,33 @@ Les adultes passent la journée immobiles, cachés sur les troncs, dans les bran
 Une sous-espèce française (galliaegloria) a été décrite en 1922 par Charles Oberthür, qui serait une espèce relictuelle de l'ère tertiaire qui a notamment été vue dans les Alpes dans la région de Briançon, près de l'Argentière La Bessée. 
 En Espagne, c'est la sous-espèce Graellsia isabellae paradisea que l'on trouve.</p>
 
-<h1>Historique et dénomination</h1>
+<h3>Historique et dénomination</h3>
 <ul>
 	<li>Le genre a été décrit par l’entomologiste anglais Augustus Radcliffe Grote en 1896 2.</li>
 	<li>L'espèce a été décrite par le naturaliste espagnol Mariano de la Paz Graëlls y de la Aguera en 18493 sous le nom initial de Actias isabellae. La station étudiée était la Sierra de Guadarrama en Espagne</li>
 </ul>
+<h3>Description</h3>
+<ul>
+	<li>Envergure du mâle : 44 à 52 mm.</li>
+	<li>Période de vol : de fin mars à juillet.</li>
+	<li>Activité : crépusculaire et plus intense les deux ou trois premières heures de la nuit.</li>
+	<li>Habitat : clairières et lisières (écotone) des forêts de pin entre 1 000 m et 1 800 m.</li>
+	<li>Plantes-hôtes : Pinus sylvestris et parfois le pin à crochets (Pinus uncinata) ainsi que le pin laricio. Les chenilles consomment les aiguilles, et semblent préférer les plus âgées (plus d'un an)</li>
+</ul>
+<h3>Reproduction</h3>
+<p>Les femelles vierges émettent une phéromone sexuelle qui attire les mâles quand la température est supérieure à 13 °C5. La femelle pond durant plusieurs jours 90 œufs en moyenne6, juste après un long accouplement (deux à quatre heures) lequel peut se produire d'avril à juin au fur et à mesure de l'émergence de nouveaux adultes. Les œufs sont collés par groupes de deux ou trois sur les rameaux terminaux des pins. En laboratoire, 75 % des œufs sont pondus dans les 72 heures suivant la fécondation, mais souvent stériles (0 à 80 % des œufs, peut-être en raison des conditions d'élevage du papillon).
+Les chenilles éclosent 10 à 20 jours après la ponte (selon température).
+La larve se développe en six stades, durant 29 à 45 jours, des chenilles se nourrissant du mois de juin au début du mois d'août. Il semble que certains clones ou écotypes de pins puissent nuire au développement de ces chenilles.
+Le sixième stade est celui du tissage par la chenille dans la litière végétale d'un cocon grossier brun, mêlé d'aiguilles de résineux, généralement contre une grosse pierre ou sous une écorce. La chrysalide entre alors en diapause hivernale, jusqu'en avril-juin de l'année suivante.
+De nombreux hybrides ont été réalisés depuis 20 ans avec le genre plutôt asiatique Actias.
+Les adultes émergent dès le début avril lorsque la température atteint 20 à 25 °C, pour une hygrométrie de 70 à 80 % d'humidité8, et donc plus tardivement en altitude et sur les versants froids, ou dans les vallées froides.
+Dans une même zone géographique, les éclosions peuvent être échelonnées sur plus de trois mois, avec néanmoins plus de 90 % des émergences en avril-mai.</p>
+<h3>Développement de la chenille</h3>
+<img src="http://fr.wikipedia.org/wiki/Isabelle_%28papillon%29#mediaviewer/File:Graellsia_isabellae_1st_instar_3_sjh.jpg" />
+<img src="http://fr.wikipedia.org/wiki/Isabelle_%28papillon%29#mediaviewer/File:Graellsia_isabellae_2nd_instar_sjh.jpg" />
+<img src="http://fr.wikipedia.org/wiki/Isabelle_%28papillon%29#mediaviewer/File:Graellsia_isabellae_3rd_instar_sjh.jpg" />
+<img src="http://fr.wikipedia.org/wiki/Isabelle_%28papillon%29#mediaviewer/File:Graellesia_isabellae_3rd_instar_2_sjh.jpg" />
+
 
   </body>
 </html>
