--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-  <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+  <link type="text/css" rel="stylesheet" href="stylesheets/style.css"/>
   		<title> Le papillon Isabelle </title>
    
   </head>
