--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@ Dans une même zone géographique, les éclosions peuvent être échelonnées su
 <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Graellsia_isabellae_3rd_instar_sjh.jpg/251px-Graellsia_isabellae_3rd_instar_sjh.jpg" />
 <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Graellesia_isabellae_3rd_instar_2_sjh.jpg/300px-Graellesia_isabellae_3rd_instar_2_sjh.jpg" />
 
-
+<div id="button">
+	<p>Envoyez-moi un <span class="bold">e-mail</span>!</p>
+			</div>
   </body>
 </html>
