--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Dans une même zone géographique, les éclosions peuvent être échelonnées su
 <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Graellesia_isabellae_3rd_instar_2_sjh.jpg/300px-Graellesia_isabellae_3rd_instar_2_sjh.jpg" />
 
 <div id="button">
-	<p>Envoyez-moi un <span class="bold">e-mail</span>!</p>
+	<p>Envoyez un <span class="bold">e-mail</span> pour plus d'inforamtions!</p>
 			</div>
   </body>
 </html>
