--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <br>C'est l'un des plus grands papillons d'Europe. Le mâle peut théoriquement repérer de très loin la femelle grâce aux capteurs de phéromones de ses larges antennes plumeuses. 
 <br>Les adultes ne s'alimentent pas, consacrant leur courte vie (de deux à seize jours ; huit jours en moyenne en captivité pour les femelles et cinq pour les mâles) à la reproduction.
 <br>Les adultes passent la journée immobiles, cachés sur les troncs, dans les branches et les aiguilles des arbres. 
-Une sous-espèce française (galliaegloria) a été décrite en 1922 par Charles Oberthür, qui serait une espèce relictuelle de l'ère tertiaire qui a notamment été vue dans les Alpes dans la région de Briançon, près de l'Argentière La Bessée. 
+Une sous-espèce française (galliaegloria) a été décrite en 1922 par Charles Oberthür, <br>qui serait une espèce relictuelle de l'ère tertiaire qui a notamment été vue dans les Alpes dans la région de Briançon, près de l'Argentière La Bessée. 
 En Espagne, c'est la sous-espèce Graellsia isabellae paradisea que l'on trouve.</p>
 
 <h3>Historique et dénomination</h3>
@@ -28,7 +28,7 @@ En Espagne, c'est la sous-espèce Graellsia isabellae paradisea que l'on trouve.
 	<li>Plantes-hôtes : Pinus sylvestris et parfois le pin à crochets (Pinus uncinata) ainsi que le pin laricio. Les chenilles consomment les aiguilles, et semblent préférer les plus âgées (plus d'un an)</li>
 </ul>
 <h3>Reproduction</h3>
-<p>Les femelles vierges émettent une phéromone sexuelle qui attire les mâles quand la température est supérieure à 13 °C5. <br>La femelle pond durant plusieurs jours 90 œufs en moyenne6, juste après un long accouplement (deux à quatre heures) lequel peut se produire d'avril à juin au fur et à mesure de l'émergence de nouveaux adultes. Les œufs sont collés par groupes de deux ou trois sur les rameaux terminaux des pins. <br>En laboratoire, 75 % des œufs sont pondus dans les 72 heures suivant la fécondation, mais souvent stériles (0 à 80 % des œufs, peut-être en raison des conditions d'élevage du papillon).
+<p>Les femelles vierges émettent une phéromone sexuelle qui attire les mâles quand la température est supérieure à 13 °C5. <br>La femelle pond durant plusieurs jours 90 œufs en moyenne6, juste après un long accouplement (deux à quatre heures) <br>lequel peut se produire d'avril à juin au fur et à mesure de l'émergence de nouveaux adultes. Les œufs sont collés par groupes de deux ou trois sur les rameaux terminaux des pins. <br>En laboratoire, 75 % des œufs sont pondus dans les 72 heures suivant la fécondation, mais souvent stériles (0 à 80 % des œufs, peut-être en raison des conditions d'élevage du papillon).
 <br>Les chenilles éclosent 10 à 20 jours après la ponte (selon température).
 <br>La larve se développe en six stades, durant 29 à 45 jours, des chenilles se nourrissant du mois de juin au début du mois d'août. Il semble que certains clones ou écotypes de pins puissent nuire au développement de ces chenilles.
 <br>Le sixième stade est celui du tissage par la chenille dans la litière végétale d'un cocon grossier brun, mêlé d'aiguilles de résineux, généralement contre une grosse pierre ou sous une écorce. La chrysalide entre alors en diapause hivernale, jusqu'en avril-juin de l'année suivante.
