--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ En Espagne, c'est la sous-espèce Graellsia isabellae paradisea que l'on trouve.
 <h3>Historique et dénomination</h3>
 <ul>
 	<li>Le genre a été décrit par l’entomologiste anglais Augustus Radcliffe Grote en 1896 2.</li>
-	<li>L'espèce a été décrite par le naturaliste espagnol Mariano de la Paz Graëlls y de la Aguera en 18493 sous le nom initial de Actias isabellae. La station étudiée était la Sierra de Guadarrama en Espagne</li>
+	<li>L'espèce a été décrite par le naturaliste espagnol Mariano de la Paz Graëlls y de la Aguera en 18493 sous le nom initial de Actias isabellae. <br>La station étudiée était la Sierra de Guadarrama en Espagne</li>
 </ul>
 <h3>Description</h3>
 <ul>
@@ -30,10 +30,10 @@ En Espagne, c'est la sous-espèce Graellsia isabellae paradisea que l'on trouve.
 <h3>Reproduction</h3>
 <p>Les femelles vierges émettent une phéromone sexuelle qui attire les mâles quand la température est supérieure à 13 °C5. <br>La femelle pond durant plusieurs jours 90 œufs en moyenne6, juste après un long accouplement (deux à quatre heures) <br>lequel peut se produire d'avril à juin au fur et à mesure de l'émergence de nouveaux adultes. Les œufs sont collés par groupes de deux ou trois sur les rameaux terminaux des pins. <br>En laboratoire, 75 % des œufs sont pondus dans les 72 heures suivant la fécondation, mais souvent stériles (0 à 80 % des œufs, peut-être en raison des conditions d'élevage du papillon).
 <br>Les chenilles éclosent 10 à 20 jours après la ponte (selon température).
-<br>La larve se développe en six stades, durant 29 à 45 jours, des chenilles se nourrissant du mois de juin au début du mois d'août. Il semble que certains clones ou écotypes de pins puissent nuire au développement de ces chenilles.
-<br>Le sixième stade est celui du tissage par la chenille dans la litière végétale d'un cocon grossier brun, mêlé d'aiguilles de résineux, généralement contre une grosse pierre ou sous une écorce. La chrysalide entre alors en diapause hivernale, jusqu'en avril-juin de l'année suivante.
+<br>La larve se développe en six stades, durant 29 à 45 jours, des chenilles se nourrissant du mois de juin au début du mois d'août. <br>Il semble que certains clones ou écotypes de pins puissent nuire au développement de ces chenilles.
+<br>Le sixième stade est celui du tissage par la chenille dans la litière végétale d'un cocon grossier brun, mêlé d'aiguilles de résineux, <br>généralement contre une grosse pierre ou sous une écorce. La chrysalide entre alors en diapause hivernale, jusqu'en avril-juin de l'année suivante.
 <br>De nombreux hybrides ont été réalisés depuis 20 ans avec le genre plutôt asiatique Actias.
-<br>Les adultes émergent dès le début avril lorsque la température atteint 20 à 25 °C, pour une hygrométrie de 70 à 80 % d'humidité8, et donc plus tardivement en altitude et sur les versants froids, ou dans les vallées froides.
+<br>Les adultes émergent dès le début avril lorsque la température atteint 20 à 25 °C, pour une hygrométrie de 70 à 80 % d'humidité, <br>et donc plus tardivement en altitude et sur les versants froids, ou dans les vallées froides.
 <br>Dans une même zone géographique, les éclosions peuvent être échelonnées sur plus de trois mois, avec néanmoins plus de 90 % des émergences en avril-mai.</p>
 <h3>Développement de la chenille</h3>
 <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Graellsia_isabellae_1st_instar_3_sjh.jpg/240px-Graellsia_isabellae_1st_instar_3_sjh.jpg" />
