--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <br>Les adultes ne s'alimentent pas, consacrant leur courte vie (de deux à seize jours ; huit jours en moyenne en captivité pour les femelles et cinq pour les mâles) à la reproduction.
 <br>Les adultes passent la journée immobiles, cachés sur les troncs, dans les branches et les aiguilles des arbres. 
 Une sous-espèce française (galliaegloria) a été décrite en 1922 par Charles Oberthür, <br>qui serait une espèce relictuelle de l'ère tertiaire qui a notamment été vue dans les Alpes dans la région de Briançon, près de l'Argentière La Bessée. 
-En Espagne, c'est la sous-espèce Graellsia isabellae paradisea que l'on trouve.</p>
+<br>En Espagne, c'est la sous-espèce Graellsia isabellae paradisea que l'on trouve.</p>
 
 <h3>Historique et dénomination</h3>
 <ul>
