--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    
   </head>
   <body>
-    <h1> Sauver les papillons Isabelle </h1>
+    <h1> Les papillons Isabelle </h1>
     <p> L'Isabelle, Graellsia isabellae, est une espèce de lépidoptères de la famille des Saturniidae, la sous-famille des Saturniinae, et du genre monotypique Graellsia.
 <br>C'est l'un des plus grands papillons d'Europe. Le mâle peut théoriquement repérer de très loin la femelle grâce aux capteurs de phéromones de ses larges antennes plumeuses. 
 <br>Les adultes ne s'alimentent pas, consacrant leur courte vie (de deux à seize jours ; huit jours en moyenne en captivité pour les femelles et cinq pour les mâles) à la reproduction.
