--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <br>Les adultes passent la journée immobiles, cachés sur les troncs, dans les branches et les aiguilles des arbres. 
 Une sous-espèce française (galliaegloria) a été décrite en 1922 par Charles Oberthür, <br>qui serait une espèce relictuelle de l'ère tertiaire qui a notamment été vue dans les Alpes dans la région de Briançon, près de l'Argentière La Bessée. 
 <br>En Espagne, c'est la sous-espèce Graellsia isabellae paradisea que l'on trouve.</p>
-
+<img src= "http://upload.wikimedia.org/wikipedia/commons/7/7e/Graellsia_isabellae1.jpg">
 <h3>Historique et dénomination</h3>
 <ul>
 	<li>Le genre a été décrit par l’entomologiste anglais Augustus Radcliffe Grote en 1896 2.</li>
