--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
   </head>
   <body>
     <h1> Les papillons Isabelle </h1>
+    <img class="image" src="http://upload.wikimedia.org/wikipedia/commons/7/7e/Graellsia_isabellae1.jpg" >
     <p> L'Isabelle, Graellsia isabellae, est une espèce de lépidoptères de la famille des Saturniidae, la sous-famille des Saturniinae, et du genre monotypique Graellsia.
 <br>C'est l'un des plus grands papillons d'Europe. Le mâle peut théoriquement repérer de très loin la femelle grâce aux capteurs de phéromones de ses larges antennes plumeuses. 
 <br>Les adultes ne s'alimentent pas, consacrant leur courte vie (de deux à seize jours ; huit jours en moyenne en captivité pour les femelles et cinq pour les mâles) à la reproduction.
 <br>Les adultes passent la journée immobiles, cachés sur les troncs, dans les branches et les aiguilles des arbres. 
 Une sous-espèce française (galliaegloria) a été décrite en 1922 par Charles Oberthür, <br>qui serait une espèce relictuelle de l'ère tertiaire qui a notamment été vue dans les Alpes dans la région de Briançon, près de l'Argentière La Bessée. 
 <br>En Espagne, c'est la sous-espèce Graellsia isabellae paradisea que l'on trouve.</p>
-<span style="position: absolute; top: 80 px; left: 100 px;width: 103px; height: 61px">
-<img src="http://upload.wikimedia.org/wikipedia/commons/7/7e/Graellsia_isabellae1.jpg" >
-</span>
 
 <h3>Historique et dénomination</h3>
 <ul>
