--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1> Les papillons Isabelle </h1>
     <p class="flotte">
-    	<img src="image" src="http://upload.wikimedia.org/wikipedia/commons/7/7e/Graellsia_isabellae1.jpg">
+    	<img src="http://upload.wikimedia.org/wikipedia/commons/7/7e/Graellsia_isabellae1.jpg"/>
     	</p>
 <p>L'Isabelle, Graellsia isabellae, est une espèce de lépidoptères de la famille des Saturniidae, la sous-famille des Saturniinae, et du genre monotypique Graellsia.
 <br>C'est l'un des plus grands papillons d'Europe. Le mâle peut théoriquement repérer de très loin la femelle grâce aux capteurs de phéromones de ses larges antennes plumeuses. 
