--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   </head>
   <body>
     <h1> Les papillons Isabelle </h1>
-      	<p><img src="http://upload.wikimedia.org/wikipedia/commons/7/7e/Graellsia_isabellae1.jpg" alt=""/>L'Isabelle, Graellsia isabellae, est une espèce de lépidoptères de la famille des Saturniidae, la sous-famille des Saturniinae, et du genre monotypique Graellsia.
+    <p class="flotte">
+ <img src="http://upload.wikimedia.org/wikipedia/commons/7/7e/Graellsia_isabellae1.jpg" alt=""/>
+</p>
+<p style="line-height:65px;">
+      	<p>L'Isabelle, Graellsia isabellae, est une espèce de lépidoptères de la famille des Saturniidae, la sous-famille des Saturniinae, et du genre monotypique Graellsia.
 <br>C'est l'un des plus grands papillons d'Europe. Le mâle peut théoriquement repérer de très loin la femelle grâce aux capteurs de phéromones de ses larges antennes plumeuses. 
 <br>Les adultes ne s'alimentent pas, consacrant leur courte vie (de deux à seize jours ; huit jours en moyenne en captivité pour les femelles et cinq pour les mâles) à la reproduction.
 <br>Les adultes passent la journée immobiles, cachés sur les troncs, dans les branches et les aiguilles des arbres. 
