--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ Une sous-espèce française (galliaegloria) a été décrite en 1922 par Charles
 <br>Les adultes émergent dès le début avril lorsque la température atteint 20 à 25 °C, pour une hygrométrie de 70 à 80 % d'humidité, <br>et donc plus tardivement en altitude et sur les versants froids, ou dans les vallées froides.
 <br>Dans une même zone géographique, les éclosions peuvent être échelonnées sur plus de trois mois, avec néanmoins plus de 90 % des émergences en avril-mai.</p>
 <h3>Développement de la chenille</h3>
-<img1 src="http://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Graellsia_isabellae_1st_instar_3_sjh.jpg/240px-Graellsia_isabellae_1st_instar_3_sjh.jpg" />
-<img2 src="http://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Graellsia_isabellae_2nd_instar_sjh.jpg/245px-Graellsia_isabellae_2nd_instar_sjh.jpg" />
-<img3 src="http://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Graellsia_isabellae_3rd_instar_sjh.jpg/251px-Graellsia_isabellae_3rd_instar_sjh.jpg" />
-<img4 src="http://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Graellesia_isabellae_3rd_instar_2_sjh.jpg/300px-Graellesia_isabellae_3rd_instar_2_sjh.jpg" />
+<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Graellsia_isabellae_1st_instar_3_sjh.jpg/240px-Graellsia_isabellae_1st_instar_3_sjh.jpg" />
+<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Graellsia_isabellae_2nd_instar_sjh.jpg/245px-Graellsia_isabellae_2nd_instar_sjh.jpg" />
+<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Graellsia_isabellae_3rd_instar_sjh.jpg/251px-Graellsia_isabellae_3rd_instar_sjh.jpg" />
+<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Graellesia_isabellae_3rd_instar_2_sjh.jpg/300px-Graellesia_isabellae_3rd_instar_2_sjh.jpg" />
   </body>
 </html>
