--- a/index.html
+++ b/index.html
@@ -46,5 +46,8 @@ Une sous-espèce française (galliaegloria) a été décrite en 1922 par Charles
 <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Graellsia_isabellae_2nd_instar_sjh.jpg/245px-Graellsia_isabellae_2nd_instar_sjh.jpg" />
 <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Graellsia_isabellae_3rd_instar_sjh.jpg/251px-Graellsia_isabellae_3rd_instar_sjh.jpg" />
 <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Graellesia_isabellae_3rd_instar_2_sjh.jpg/300px-Graellesia_isabellae_3rd_instar_2_sjh.jpg" />
-  </body>
+ <div id="footer">
+	<p>123 votre rue, Hasardville, 00000 Pays | Tel: 06 12 34 56 78</p>
+	</div>
+	</body>
 </html>
