--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
    
   </head>
   <body>
+ 	<div id="header">
+	<p id="name">Tapez votre nom ici</p>
+	<a href="mailto:you@yourdomain.com"><p id="email">papillon@votremail.com</p></a>
     <h1> Les papillons Isabelle </h1>
     <p class="flotte">
  <img src="http://upload.wikimedia.org/wikipedia/commons/7/7e/Graellsia_isabellae1.jpg" alt=""/>
