--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
  	<div id="header">
+ 	<p id="name"><h1> Les papillons Isabelle </h1></p>
 	<a href="mailto:you@yourdomain.com"><p id="email">papillon@votremail.com</p></a>
     <h1> Les papillons Isabelle </h1>
     <p class="flotte">
