--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
  	<div id="header">
  	<p id="name"></p><h1></h1>Les papillons Isabelle</h1></p>
 	<a href="mailto:you@yourdomain.com"><p id="email">papillon@votremail.com</p></a>
+	</div>
     <p class="flotte">
  <img src="http://upload.wikimedia.org/wikipedia/commons/7/7e/Graellsia_isabellae1.jpg" alt=""/>
 </p>
