--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
  	<div id="header">
- 	<p id="name"></p><h1></h1>Les papillons Isabelle</h1></p>
+ 	<h1>Les papillons Isabelle</h1>
 	<a href="mailto:you@yourdomain.com"><p id="email">papillon@votremail.com</p></a>
 	</div>
     <p class="flotte">
