--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Une sous-espèce française (galliaegloria) a été décrite en 1922 par Charles
 <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Graellsia_isabellae_3rd_instar_sjh.jpg/251px-Graellsia_isabellae_3rd_instar_sjh.jpg" />
 <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Graellesia_isabellae_3rd_instar_2_sjh.jpg/300px-Graellesia_isabellae_3rd_instar_2_sjh.jpg" />
  <div id="footer">
-	<a href="mailto:you@yourdomain.com"><p id="email">papillon@votremail.com</p></a>
+	<p>Envoyez un <a href="mailto:you@yourdomain.com"><p id="email">papillon@votremail.com</p></a>
 	</div>
 	</body>
 </html>
