--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Une sous-espèce française (galliaegloria) a été décrite en 1922 par Charles
 <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Graellesia_isabellae_3rd_instar_2_sjh.jpg/300px-Graellesia_isabellae_3rd_instar_2_sjh.jpg" />
  <div id="footer">
 	 
-	<a href="http://www.commentcamarche.net"> Envoyez un e-mail à </a>
+	<a href="http://www.commentcamarche.net"> Envoyez un e-mail pour plus de renseignements </a>
 	</div>
 	</body>
 </html>
