--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ Une sous-espèce française (galliaegloria) a été décrite en 1922 par Charles
 
 <h3>Historique et dénomination</h3>
 <ul>
-	<li>Le genre a été décrit par l’entomologiste anglais Augustus Radcliffe Grote en 1896 2.</li>
-	<li>L'espèce a été décrite par le naturaliste espagnol Mariano de la Paz Graëlls y de la Aguera en 18493 sous le nom initial de Actias isabellae. <br>La station étudiée était la Sierra de Guadarrama en Espagne</li>
+	<li>Le genre a été décrit par l’entomologiste anglais Augustus Radcliffe Grote en 1896.</li>
+	<li>L'espèce a été décrite par le naturaliste espagnol Mariano de la Paz Graëlls y de la Aguera en 1849 sous le nom initial de Actias isabellae. <br>La station étudiée était la Sierra de Guadarrama en Espagne</li>
 </ul>
 <h3>Description</h3>
 <ul>
@@ -36,7 +36,7 @@ Une sous-espèce française (galliaegloria) a été décrite en 1922 par Charles
 	<li>Plantes-hôtes : Pinus sylvestris et parfois le pin à crochets (Pinus uncinata) ainsi que le pin laricio. Les chenilles consomment les aiguilles, et semblent préférer les plus âgées (plus d'un an)</li>
 </ul>
 <h3>Reproduction</h3>
-<p>Les femelles vierges émettent une phéromone sexuelle qui attire les mâles quand la température est supérieure à 13 °C5. <br>La femelle pond durant plusieurs jours 90 œufs en moyenne6, juste après un long accouplement (deux à quatre heures) <br>lequel peut se produire d'avril à juin au fur et à mesure de l'émergence de nouveaux adultes. Les œufs sont collés par groupes de deux ou trois sur les rameaux terminaux des pins. <br>En laboratoire, 75 % des œufs sont pondus dans les 72 heures suivant la fécondation, mais souvent stériles (0 à 80 % des œufs, peut-être en raison des conditions d'élevage du papillon).
+<p>Les femelles vierges émettent une phéromone sexuelle qui attire les mâles quand la température est supérieure à 13 °C. <br>La femelle pond durant plusieurs jours 90 œufs en moyenne, juste après un long accouplement (deux à quatre heures) <br>lequel peut se produire d'avril à juin au fur et à mesure de l'émergence de nouveaux adultes. Les œufs sont collés par groupes de deux ou trois sur les rameaux terminaux des pins. <br>En laboratoire, 75 % des œufs sont pondus dans les 72 heures suivant la fécondation, mais souvent stériles (0 à 80 % des œufs, peut-être en raison des conditions d'élevage du papillon).
 <br>Les chenilles éclosent 10 à 20 jours après la ponte (selon température).
 <br>La larve se développe en six stades, durant 29 à 45 jours, des chenilles se nourrissant du mois de juin au début du mois d'août. <br>Il semble que certains clones ou écotypes de pins puissent nuire au développement de ces chenilles.
 <br>Le sixième stade est celui du tissage par la chenille dans la litière végétale d'un cocon grossier brun, mêlé d'aiguilles de résineux, <br>généralement contre une grosse pierre ou sous une écorce. La chrysalide entre alors en diapause hivernale, jusqu'en avril-juin de l'année suivante.
